# django-hugo

./: .gitignore  .pre-commit-config.yaml  README.md  example.env  pyproject.toml  tox.ini
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
src/django_hugo/: __init__.py  admin.py  apps.py  checks.py  models.py  urls.py  wrapper.py
src/django_hugo/management/commands/: hugosync.py
src/django_hugo/migrations/: 0001_initial.py
src/django_hugo/sites/: actions.py  config.py  forms.py  models.py  views.py
src/django_hugo/templates/hugo/: hugo.toml.txt
src/django_hugo/templates/hugo/sites/: site_confirm_delete.html  site_detail.html  site_form.html  site_list.html
src/django_hugo/templates/hugo/themes/: theme_list.html
src/django_hugo/themes/: actions.py  config.py  models.py  views.py
testproject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
testproject/templates/: base.html  index.html
testproject/templates/registration/: login.html  logout.html
tests/: test_hugo_config.py  test_theme_actions.py  test_theme_metadata.py
tests/sites/testblog/: hugo.toml
tests/themes/baretest/: theme.toml
